syntax = "proto3";

option go_package = "pkg/capabilities/consensus/datafeeds";

package datafeeds_types;

message DataFeedsOutcomeMetadata {
  map<string, DataFeedsMercuryReportInfo> feedInfo = 1;
}

message DataFeedsMercuryReportInfo {
  reserved 1, 2, 4;
  int64 observation_timestamp = 3;
  bytes benchmark_price = 5; // big.Int
}

message LLOOutcomeMetadata {
  map<uint32, LLOStreamInfo> streamInfo = 1;
}

message LLOStreamInfo {
  int64 timestamp = 1;
  bytes price = 2; // Decimal
}